# kuzu

./: CMakeLists.txt  Makefile
dataset/copy-fault-tests/rel-table-multiplicity-violation/: schema.cypher
examples/cpp/: main.cpp
extension/duckdb/: CMakeLists.txt
extension/duckdb/src/: duckdb_catalog.cpp
extension/fts/src/: fts_extension.cpp
extension/json/src/: json_extension.cpp
extension/postgres/: CMakeLists.txt
extension/sqlite/: CMakeLists.txt
extension/sqlite/src/: sqlite_catalog.cpp
scripts/antlr4/: Cypher.g4  Cypher.g4.copy
src/antlr4/: Cypher.g4  keywords.txt
src/binder/bind/: bind_ddl.cpp  bind_external.cpp  bind_file_scan.cpp  bind_graph_pattern.cpp  bind_table_function.cpp
src/binder/bind_expression/: bind_lambda_expression.cpp
src/binder/expression/: node_rel_expression.cpp
src/catalog/: catalog.cpp  catalog_set.cpp
src/catalog/catalog_entry/: CMakeLists.txt  (+9 more)
src/common/: null_mask.cpp
src/expression_evaluator/: function_evaluator.cpp
src/function/: function_collection.cpp
src/graph/: on_disk_graph.cpp
src/main/: client_context.cpp  database.cpp  db_config.cpp
src/optimizer/: acc_hash_join_optimizer.cpp  filter_push_down_optimizer.cpp  logical_operator_visitor.cpp  projection_push_down_optimizer.cpp
src/parser/: transformer.cpp
src/storage/: storage_manager.cpp  undo_buffer.cpp  wal_replayer.cpp
src/transaction/: transaction.cpp  transaction_manager.cpp
test/c_api/: database_test.cpp
test/planner/: cardinality_test.cpp
test/test_runner/: test_runner.cpp
tools/wasm/: CMakeLists.txt  main.cpp
(+196 files in other folders)
